# lite_media_core

./: 404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: deploy.yml  mkdocs.yml  ruff.yml  run_tests.yml
api/audio/: index.html
api/future/: index.html
api/movie/: index.html
api/sequence/: index.html
api/utils/: index.html
docs/: index.md  quickstart.md
docs/api/: audio.md  future.md  movie.md  sequence.md  utils.md
lite_media_core/: __init__.py  mediaos.py  rate.py  resolution.py  timeCode.py  timecode.py
lite_media_core/_mediaInfo/: __init__.py  _base.py  _mediaInfoAPI.py
lite_media_core/_media_info/: __init__.py  _base.py  _media_info_api.py
lite_media_core/media/: __init__.py  _audio.py  _embedded.py  _image.py  _imageMedia.py  _image_media.py  _media.py  _utils.py  _video.py
lite_media_core/path_utils/: __init__.py  mimeTypes.py  singleFile.py  single_file.py
lite_media_core/path_utils/_resources/: additional.mime.types
lite_media_core/path_utils/path/: __init__.py  _path.py  _templates.py
lite_media_core/path_utils/sequence/: __init__.py  _formats.py  _frameRange.py  _frame_range.py  _sequence.py  _utils.py
quickstart/: index.html
search/: search_index.json
tests/: test_init.py  test_mediaos.py  test_mimeTypes.py  test_rate.py  test_resolution.py  test_singleFile.py  test_single_file.py  test_timeCode.py  test_timecode.py
tests/resources/media/: img-anamorphic.dpx  img-anamorphic.exr  img.dpx  img.exr  img.jp2  img.tiff  video.mov  video_with_tc.mov
tests/test_media/: test_audio.py  test_embeddedAudio.py  test_embeddedMedia.py  test_embeddedVideo.py  test_image.py  test_imageMedia.py  test_image_media.py  test_init_module.py  test_media.py  test_utils.py  test_video.py
tests/test_mediaInfo/: test_base.py  test_init.py  test_mediainfoapi.py
tests/test_media_info/: test_base.py  test_init.py  test_mediainfoapi.py
tests/test_path/: test_path.py
tests/test_sequence/: test_discover.py  test_formats.py  test_frameRange.py  test_frame_range.py  test_sequence.py  test_utils.py
tests_embedded/: test_embeddedAudio.py  test_embeddedVideo.py
