[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lite_media_core"
description = "A handy python library to handle media."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.6"
dynamic = ["version"]

dependencies = [
  "timecode",
  "fileseq==1.8.1",
  "pymediainfo",
]

[project.urls]
Homepage = "https://github.com/rdelillo/lite_media_core"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "mock"]
embedded = ["requests", "validators", "yt-dlp"]
pylint = ["pylint"]

[tool.setuptools]
packages = ["lite_media_core"]
include-package-data = true

[tool.setuptools.package-data]
# Equivalent to MANIFEST.in's graft
lite_media_core = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.pyd", "__pycache__"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
