[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lite_media_core"
description = "A lightweight yet powerful media framework for developers."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.6"
dynamic = ["version"]

dependencies = [
  "timecode",
  "fileseq==1.8.1",
  "pymediainfo",
]

[project.urls]
Homepage = "https://github.com/rdelillo/lite_media_core"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "mock"]
embedded = ["requests", "validators", "yt-dlp"]
lint = ["ruff"]

[tool.setuptools]
packages = ["lite_media_core"]
include-package-data = true

[tool.setuptools.package-data]
lite_media_core = [
  "*.py",
  "_media_info/dll_resources/*.dll",
  "_media_info/dll_resources/*.so*",
  "_media_info/dll_resources/*.dylib"
]

[tool.setuptools.exclude-package-data]
"*" = [
  "*.pyc",
  "*.pyo",
  "*.pyd",
  "__pycache__",
  "*.DS_Store",
  "tests/*",
  "tests_embedded/*",
  "docs/*",
  "examples/*",
  ".*",
  "*.md"
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
